force-app/main/default/objects/OrderNonComplianceAsset__c/OrderNonComplianceAsset__c.object-meta.xml
<CustomObject>
    <label>Actif de non-conformité commande</label>
    <nameField>
        <displayFormat>ONCA/{YYYY}/{0000000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actifs de non-conformité commande</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>