force-app/main/default/objects/OrderNonComplianceAsset__c/fields/asset__c.field-meta.xml
<CustomField>
    <fullName>asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Actif</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Non-conformités commande</relationshipLabel>
    <relationshipName>OrderNonCompliances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>