force-app/main/default/objects/OrderNonComplianceAsset__c/fields/customerOrder__c.field-meta.xml
<CustomField>
    <fullName>customerOrder__c</fullName>
    <formula>orderNonCompliance__r.customerOrder__c</formula>
    <label>Commande client</label>
    <type>Text</type>
</CustomField>