force-app/main/default/objects/OrderNonComplianceAsset__c/fields/orderNonCompliance__c.field-meta.xml
<CustomField>
    <fullName>orderNonCompliance__c</fullName>
    <label>Non-conformité commande</label>
    <referenceTo>OrderNonCompliance__c</referenceTo>
    <relationshipLabel>Actifs de non-conformité commande</relationshipLabel>
    <relationshipName>OrderNonComplianceAssets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>