force-app/main/default/objects/OrderNonComplianceAsset__c/validationRules/VR_K3_ONCA_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ONCA_Order</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
 orderNonCompliance__r.customerOrder__c !=  asset__r.customerOrder__c &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>asset__c</errorDisplayField>
    <errorMessage>Commande client de l&apos;actif différente de celle de la non-conformité!</errorMessage>
</ValidationRule>